Split build.gradle.kts into smaller files (#845)
Co-authored-by: Oleksandr.Karpovich <oleksandr.karpovich@jetbrains.com>